  * Added UV-index to hko.gov.hk source
  * Fixed problem with N/A UV-index
  * Disabled label "Show on map" if case map isn't available
  * Added new iconset Noun  - The Noun Project icons are designed by Adam
    Whitcroft from The Noun Project. http://thenounproject.com"
  * Moved station Townsville from Victoria to QLD and station Canberra 
    from NSW  to ACT in bom.gov.au source

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Nov 2012 19:31:23 +0200

meecast (0.6.8) unstable; urgency=low

  * Added icon and description string to gismeteo.ru 
  * Added data UV-index and Visible for weather.com source
  * Added visible units
  * Decreased cycle count to 1 for Map
  * Added Arabic translation. Thanks Tarad Alfandi aka ttt0600
  * Adeed Norwegian translation. Thanks Peer-Atle Motland aka Pam
  * Updated Albanian, Catalan, Swedish, Portuguese translations

 -- Vlad Vasiliev <vlad@gas.by>  Mon, 19 Nov 2012 19:31:23 +0200

meecast (0.6.7) unstable; urgency=low

  * Added icon to hko.gov.hk
  * Fixed segmentation fault after adding GPS-station in nil station list
  * Added Malaysia to foreca.com database
  * Added icon and description string to foreca
  * Changed color for raindrops in standby screen icons from blue to cyan
  * Added parameters for LockScreeni Widget
  * Updated Russian translation

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 29 Oct 2012 08:31:23 +0200

meecast (0.6.6) unstable; urgency=low

  * Fixed problem Shiny and SimpelMee iconsets 
  * Fixed problem with ContextKit (description and station text) for BillBoard
    application

 -- Vlad Vasiliev <vlad@gas.by>  Thu, 09 Oct 2012 11:41:23 +0200

meecast (0.6.5) unstable; urgency=low

  * Fixed problem with nil description 
  * Returned station Brisbane (Qld) in the bom.gov.au source
  * Updated icon pack "SimpelMee". Thanks Kim Venetvirta
  * Moved station Broome to region Western Australia in bom.gov.au
  * Removed first Sydney from bom.gov.au